--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.45.2",
     "react-redux": "^8.1.1",
     "sass": "^1.64.1",
@@ -48,6 +49,7 @@
     "@storybook/nextjs": "^7.1.1",
     "@storybook/react": "^7.1.1",
     "@storybook/testing-library": "^0.2.0",
+    "@types/react-google-recaptcha": "^2.1.5",
     "eslint-plugin-storybook": "^0.6.13",
     "sass": "^1.64.1",
     "storybook": "^7.1.1"
