--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 NEXT_PUBLIC_INCTAGRAM_API_URL=https://instagramm-backend.vercel.app
+NEXT_PUBLIC_RECAPTCHA_API_KEY=6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI
+
