--- a/package.json
+++ b/package.json
@@ -16,31 +16,29 @@
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@reduxjs/toolkit": "^1.9.5",
     "@storybook/react": "^7.1.1",
     "@types/node": "20.4.4",
     "@types/react": "18.2.15",
-    "@types/react-dates": "^21.8.3",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "clsx": "^2.0.0",
-    "eslint": "8.45.0",
-    "eslint-config-next": "13.4.12",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "next": "13.4.12",
     "next-intl": "^2.19.1",
-    "postcss": "8.4.27",
+    "next-recaptcha-v3": "^1.2.0",
     "react": "18.2.0",
-    "react-dates": "^21.8.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.45.2",
+    "react-image-crop": "^10.1.5",
     "react-redux": "^8.1.1",
-    "sass": "^1.64.1",
     "styled-components": "^6.0.5",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
@@ -57,8 +55,28 @@
     "@storybook/react": "^7.1.1",
     "@storybook/testing-library": "^0.2.0",
     "@types/react-google-recaptcha": "^2.1.5",
+    "eslint": "8.45.0",
+    "eslint-config-next": "13.4.12",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^5.0.0-canary-7118f5dd7-20230705",
     "eslint-plugin-storybook": "^0.6.13",
+    "postcss": "^8.4.28",
+    "postcss-scss": "^4.0.7",
     "sass": "^1.64.1",
-    "storybook": "^7.1.1"
+    "storybook": "^7.1.1",
+    "stylelint": "^15.10.3",
+    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-config-recommended-scss": "^12.0.0",
+    "stylelint-config-sass-guidelines": "^10.0.0",
+    "stylelint-config-standard": "^34.0.0",
+    "stylelint-config-standard-scss": "^10.0.0",
+    "stylelint-declaration-block-no-ignored-properties": "^2.7.0",
+    "stylelint-order": "^6.0.3",
+    "stylelint-scss": "^5.1.0",
+    "stylelint-selector-bem-pattern": "^3.0.1"
   }
 }
