--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-redux": "^8.1.1",
     "react-virtualized": "^9.22.5",
     "styled-components": "^6.0.5",
+    "swiper": "^11.0.3",
     "tailwindcss": "3.3.3",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
