--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,8 @@
     "next/core-web-vitals",
     "plugin:import/recommended",
     "plugin:react/recommended",
-    "plugin:jsx-a11y/recommended"
+    "plugin:jsx-a11y/recommended",
+    "prettier"
   ],
   "parserOptions": {
     "ecmaVersion": 2021,
@@ -29,7 +30,7 @@
     "no-nested-ternary": "error",
     "import/named": "off",
     "no-debugger": "warn",
-    "no-unused-vars": "warn",
+    "no-unused-vars": "off",
     "arrow-parens": ["error", "as-needed"],
     "no-multiple-empty-lines": ["error", {"max": 2, "maxBOF": 1, "maxEOF": 1}],
     "prettier/prettier": "warn",
